# tinyzkp

./: .gitignore  .gitignore.backup  1M_SRS_DEPLOYMENT_SUMMARY.md  512K_DEPLOYMENT_SUCCESS.md  API_TEST_SUMMARY.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_1M_QUICKSTART.txt  Dockerfile  FRONTEND_BACKEND_VERIFICATION.md  LICENSE  PRODUCTION_LAUNCH_COMPLETE.md  PRODUCTION_READINESS.md  RAILWAY_1M_SRS_UPDATE.md  RAILWAY_SRS_SETUP.md  README.md  SECURITY.md  SECURITY_AUDIT_DATA_STORAGE.md  TESTING_GUIDE.md  entrypoint.sh  railway.toml  request.json  selectors.csv  selectors_dense.csv  selectors_mixed.csv
ceremony/: powersOfTau28_hez_final_15.ptau
scripts/: deploy_4m_srs_to_railway.sh  generate_dev_srs.sh  generate_production_srs_railway.sh  test_api_local.sh  test_login_flow.sh  test_performance.sh  test_production_readiness.sh  test_security.sh  test_signup_flow.sh  test_sszkp.sh  test_sszkp_extended.sh
src/: air.rs  api.rs  domain.rs  lib.rs  opening.rs  pcs.rs  perm_lookup.rs  quotient.rs  scheduler.rs  srs_setup.rs  stream.rs  transcript.rs
